--- a/header.html
+++ b/header.html
@@ -167,7 +167,7 @@ else{
                             </li>                        
                             <?php
                                 $urlLang = "?lang=esp";
-                                if (isset($_GET['view'])) {
+                                if (isset($_GET['view']) || isset($_GET['package'])) {
                                     $urlLang = "&lang=esp";
                                 }
                             ?>
