últimos cambios de mar
lo que me toco en google docs

--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@ if (isset($_GET['lang'])) {
                 <div class="container">
                     <div class="row">
                         <!-- Title Footer-->
-                        <div class="col-md-5">
+                        <div class="col-md-4">
                             <div class="title-footer">
                                 <h2>¡Reserve Ahora!
                             </div>
@@ -16,9 +16,11 @@ if (isset($_GET['lang'])) {
                         </div>
                         <!-- End Title Footer-->
 
-                        <div class="col-md-7">
+                        <div class="col-md-8">
                             <div class="row">                             
                                 <!-- Social Us-->
+                                <div class="col-md-1">
+                                </div>                                
                                 <div class="col-md-3">
                                     <h3>SIGUENOS EN</h3>
                                     <ul class="social">
@@ -28,7 +30,7 @@ if (isset($_GET['lang'])) {
                                 <!-- End Social Us-->
                                 
                                 <!-- Recent links-->
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h3>VIAJES</h3>
                                     <ul id="trips_footer">                                           
                                     </ul>
@@ -36,7 +38,7 @@ if (isset($_GET['lang'])) {
                                 <!-- End Recent links-->
 
                                 <!-- Contact Us-->
-                                <div class="col-md-4">
+                                <div class="col-md-5">
                                    <h3>CONTACTANOS</h3>
                                    <ul class="contact_footer">
                                         <li>
@@ -93,7 +95,7 @@ else{
                 <div class="container">
                     <div class="row">
                         <!-- Title Footer-->
-                        <div class="col-md-5">
+                        <div class="col-md-4">
                             <div class="title-footer">
                                 <h2>Reserve now!
                             </div>
@@ -102,9 +104,11 @@ else{
                         </div>
                         <!-- End Title Footer-->
 
-                        <div class="col-md-7">
+                        <div class="col-md-8">
                             <div class="row">                             
                                 <!-- Social Us-->
+                                <div class="col-md-1">
+                                </div>
                                 <div class="col-md-3">
                                     <h3>FOLLOW US</h3>
                                     <ul class="social">
@@ -114,7 +118,7 @@ else{
                                 <!-- End Social Us-->
                                 
                                 <!-- Recent links-->
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h3>TRIPS</h3>
                                     <ul id="trips_footer">                                           
                                     </ul>
@@ -122,11 +126,11 @@ else{
                                 <!-- End Recent links-->
 
                                 <!-- Contact Us-->
-                                <div class="col-md-4">
+                                <div class="col-md-5">
                                    <h3>CONTACT US</h3>
                                    <ul class="contact_footer">
                                         <li>
-                                            <i class="fa fa-envelope"></i> marpicazo@aol.com
+                                            <i class="fa fa-envelope"></i>mpicazo@travelgroup-holidays.com
                                         </li>
                                         <li>
                                             <i class="fa fa-phone"></i> <strong>EU:</strong> (619) 730-0380
