--- a/header.html
+++ b/header.html
@@ -151,8 +151,8 @@ else{
 
                         <ul class="collapse"><!-- collapse class for collapse the drop down -->
                             <!-- website title - Logo class -->
-                            <li class="title">
-                                <a href="index.php"><span>T</span>ravelgroup<span>.</span></a> 
+                            <li class="title" style="margin-top: 10px; margin-bottom: 0px !important;">
+                                <a href="index.php"><img src="img/logo.jpg" width="150"></span></a> 
                                 <!--<i class="fa fa-rocket"></i>-->
                             </li>
                             <!-- End website title - Logo class -->
