--- a/admin/package.html
+++ b/admin/package.html
@@ -128,8 +128,8 @@
                                 '<tr>' +
                                     '<th>Editar</th>' +
                                     '<th>Nombre de Paquete</th>' +
-                                    '<th class="align-center">Prioridad Menu</th>' +
-                                    '<th class="align-center">Prioridad Página Principal</th>' +
+                                    '<th class="align-center">Prioridad Menu<br>Límite 4</th>' +
+                                    '<th class="align-center">Prioridad Página Principal<br>Límite 3</th>' +
                                     '<th class="align-center">Detalles Agente</th>' +
                                 '</tr>' +
                             '</thead>' +
