--- a/header.html
+++ b/header.html
@@ -21,10 +21,7 @@ if (isset($_GET['lang'])) {
         <link href="#" rel="stylesheet" media="screen" class="skin">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <!-- Favicons -->
-        <link rel="shortcut icon" href="img/icons/favicon.ico">
-        <link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">  
+        <link rel="shortcut icon" href="img/favicon.ico">
 
         <!-- Head Libs -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -61,25 +58,25 @@ if (isset($_GET['lang'])) {
 
                         <ul class="collapse"><!-- collapse class for collapse the drop down -->
                             <!-- website title - Logo class -->
-                            <li class="title" style="margin-top: 10px; margin-bottom: 0px !important;">
-                                <a href="index.php?lang=esp"><img src="img/logo.jpg" width="150"></span></a> 
+                            <li class="title" style="margin-top: 10px; margin-bottom: 10px !important;">
+                                <a href="index.php?lang=esp"><img src="img/logo.jpg" width="250px" height="70px"></span></a> 
                                 <!--<i class="fa fa-rocket"></i>-->
                             </li>
                             <!-- End website title - Logo class -->
 
-                            <li class="menu-element" id="menu-main_content"><a href="index.php?lang=esp">INICIO</a></li>
+                            <li class="menu-element" id="menu-main_content"><a href="index.php?lang=esp" class="menu-item">INICIO</a></li>
 
-                            <li class="menu-element" id="menu-trips"><a href="trips.php?lang=esp">VIAJES</a></li>                        
+                            <li class="menu-element" id="menu-trips"><a href="trips.php?lang=esp" class="menu-item">VIAJES</a></li>                        
                             
-                            <li><a href="#">PAQUETES</a> 
+                            <li><a href="#" class="menu-item">PAQUETES</a> 
                                 <div id="top-menu-packages" class="drop-down full-width hover-fade">
                                 </div>
                             </li>                        
                             <?php 
                                 $url = substr($_SERVER['REQUEST_URI'], 0, -9);
                             ?>
-                            <li class="menu-element" id="menu-contact"><a href="contact.php?lang=esp">CONTACTO</a></li>
-                            <li><a href="<?= $url ?>" style="display: inline-block;">Lenguaje <img src="img/mx.png" style="display: inline-block;"></a></li>
+                            <li class="menu-element" id="menu-contact"><a href="contact.php?lang=esp" class="menu-item">CONTACTO</a></li>
+                            <li><a href="<?= $url ?>" style="display: inline-block;" class="menu-item">LENGUAJE <span class="logo-language"><img src="img/mx.png" style="display: inline-block;"></a></span></li>
                         </ul>
                     </nav>
                     <!-- Main Nav -->
@@ -111,10 +108,7 @@ else{
         <link href="#" rel="stylesheet" media="screen" class="skin">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <!-- Favicons -->
-        <link rel="shortcut icon" href="img/icons/favicon.ico">
-        <link rel="apple-touch-icon" href="img/icons/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">  
+        <link rel="shortcut icon" href="img/favicon.ico">
 
         <!-- Head Libs -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -151,17 +145,17 @@ else{
 
                         <ul class="collapse"><!-- collapse class for collapse the drop down -->
                             <!-- website title - Logo class -->
-                            <li class="title" style="margin-top: 10px; margin-bottom: 0px !important;">
-                                <a href="index.php"><img src="img/logo.jpg" width="150"></span></a> 
+                            <li class="title" style="margin-top: 10px; margin-bottom: 10px !important;">
+                                <a href="index.php?lang=esp"><img src="img/logo.jpg" width="250px" height="70px"></span></a> 
                                 <!--<i class="fa fa-rocket"></i>-->
                             </li>
                             <!-- End website title - Logo class -->
 
-                            <li class="menu-element" id="menu-main_content"><a href="index.php">HOME</a></li>
+                            <li class="menu-element" id="menu-main_content"><a href="index.php" class="menu-item">HOME</a></li>
 
-                            <li class="menu-element" id="menu-trips"><a href="trips.php">TRIPS</a></li>                        
+                            <li class="menu-element" id="menu-trips"><a href="trips.php" class="menu-item">TRIPS</a></li>                        
                             
-                            <li><a href="#">PACKAGES</a> 
+                            <li><a href="#" class="menu-item">PACKAGES</a> 
                                 <div id="top-menu-packages" class="drop-down full-width hover-fade">
                                 </div>
                             </li>                        
@@ -171,8 +165,8 @@ else{
                                     $urlLang = "&lang=esp";
                                 }
                             ?>
-                            <li class="menu-element" id="menu-contact"><a href="contact.php">CONTACT</a></li>
-                            <li><a href="<?= $_SERVER['REQUEST_URI'] . $urlLang; ?>" style="display: inline-block;">Language <img src="img/usa.png" style="display: inline-block;"></a></li>
+                            <li class="menu-element" id="menu-contact"><a href="contact.php" class="menu-item">CONTACT</a></li>
+                            <li><a href="<?= $_SERVER['REQUEST_URI'] . $urlLang; ?>" style="display: inline-block;" class="menu-item">LANGUAGE <span class="logo-language"><img src="img/usa.png" style="display: inline-block;"></a></span></li>
                         </ul>
                     </nav>
                     <!-- Main Nav -->
@@ -219,7 +213,7 @@ else{
                         var description = "Ask your travel agent";
                         var urlLang = "";
                         if(lang == "esp") {
-                            description = "Pregunta a tu agente de ventas";
+                            description = "Pregunta a tu agente de viajes";
                             urlLang = "&lang=esp";
                         }
                         if(typeof object.get("description") != "undefined") {
